# stagesync-rust

./: .env.example  .gitignore  Cargo.toml  README.md  diesel.toml  package-lock.json  todo.bak  todo.md
.cargo/: config.toml  frontend.rs
api/: db.rs  errors.rs  handlers.rs  main.rs  middlewares.rs  models.rs  routes.rs  schema.rs
api/extractors/: claims.rs
api/middlewares/: cors.rs
api/models/: artist.rs  gig.rs  mod.rs  user.rs
api/services/: auth.rs
backend/: db.rs  lib.rs  main.rs  models.rs  routes.rs  schema.rs
frontend/: package.json
migrations/001_create_users/: up.sql
migrations/2023-09-07-192816_create_artists/: up.sql
migrations/2023-09-07-192834_create_gigs/: down.sql  up.sql
migrations/2024-10-08-140000_create_artists/: down.sql  up.sql
migrations/2024-10-08-140100_create_gigs/: down.sql  up.sql
migrations/2024-10-08-140200_generate_dummy_data/: up.sql
migrations/2024-10-19-133713_create_users/: up.sql
migrations/2024-10-19-133720_create_artists/: up.sql
migrations/2024-10-19-133726_create_gigs/: up.sql
migrations/2024-10-19-133741_create_generate_dummy_data/: up.sql
migrations/2024-11-18-083726_auth0_users/: down.sql  up.sql
migrations/2024-11-18-083811_generate_dummy_data/: up.sql
static/: index.html  styles.css
ui/: index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
ui/src/: App.tsx  auth0-provider-with-navigate.tsx  main.tsx  vite-env.d.ts
ui/src/components/AppNavBar/: AppNavbar.tsx  index.ts
ui/src/components/AuthenticationGuard/: AuthenticationGuard.tsx  index.ts
ui/src/components/Button/: Button.module.css  Button.tsx
ui/src/components/CardAlert/: CardAlert.tsx  index.ts
ui/src/components/CustomDatePicker/: CustomDatePicker.tsx  index.ts
ui/src/components/CustomizedDataGrid/: CustomizedDataGrid.tsx  index.ts
ui/src/components/Dashboard/: Dashboard.tsx
ui/src/components/Header/: Header.tsx
ui/src/components/HighlightedCArd/: HighlightedCard.tsx  index.ts
ui/src/components/LoginButton/: LoginButton.tsx  index.ts
ui/src/components/LogoutButton/: LogoutButton.tsx
ui/src/components/MainGrid/: MainGrid.tsx
ui/src/components/MenuButton/: MenuButton.tsx
ui/src/components/MenuContent/: MenuContent.tsx  index.ts
ui/src/components/NavbarBreadcrumbs/: NavbarBreadcrumbs.tsx  index.ts
ui/src/components/OptionsMenu/: OptionsMenu.tsx  index.ts
ui/src/components/PageLayout/: PageLayout.module.css  PageLayout.tsx
ui/src/components/PageLoader/: PageLoader.tsx
ui/src/components/Search/: Search.tsx
ui/src/components/SelectContent/: SelectContent.tsx  index.ts
ui/src/components/SideBar/: SideBar.module.css  SideBar.tsx
ui/src/components/SideMenu/: SideMenu.tsx
ui/src/components/SideMenuMobile/: SideMenuMobile.tsx  index.ts
ui/src/helpers/: mappings.ts  string.ts
ui/src/hooks/: useData.ts
ui/src/models/: api-response.ts  artist.ts  gig.ts  user.ts
ui/src/pages/ArtistsPage/: index.ts  (+1 more)
ui/src/services/: data.service.ts  external-api.service.ts  message.service.ts
ui/src/styles/: general.css  styles.css  theme.css
(+24 files in other folders)
