[[bin]]
name = "backend-build"
path = ".cargo/bin/backend.rs"

[[bin]]
name = "frontend-build"
path = ".cargo/bin/frontend.rs"

[[bin]]
name = "main"
path = "backend/main.rs"

[dependencies]
actix = "0.13.5"
actix-cors = "0.7.0"
actix-files = "0.6.6"
actix-web = "4.9.0"
anyhow = "1.0.89"
chrono = "0.4.38"
diesel = { version = "2.2.0", features = ["postgres", "chrono", "r2d2", "uuid"] }
# build libpq and openssl as part of the build process
# uncomment these lines if you run into setup issues
# pq-sys = { version = "0.6", features = ["bundled"] }
# openssl-sys = { version = "0.9.100", features = ["vendored"] }
dotenvy = "0.15"
itertools = "0.13.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
uuid = { version =  "1.10.0",  features = ["v4", "serde"] }

[package]
default-run = "main"
edition = "2021"
name = "stagesync"
publish = false
version = "0.1.0"

[profile.dev]
debug-assertions = true
