[[bin]]
name = "backend-build"
path = ".cargo/bin/backend.rs"

[[bin]]
name = "frontend-build"
path = ".cargo/bin/frontend.rs"

[[bin]]
name = "main"
path = "api/main.rs"

[dependencies]
actix = "0.13.5"
actix-cors = "0.7.0"
actix-files = "0.6.6"
actix-web = "4.9.0"
anyhow = "1.0.89"
chrono = { version = "0.4.38", features = ["serde"] }
derive_more = { version = "1.0.0", features = ["display", "error"] }
diesel = { version = "2.2.0", features = [
  "postgres",
  "chrono",
  "numeric",
  "r2d2",
  "uuid",
] }
# build libpq and openssl as part of the build process
# uncomment these lines if you run into setup issues
# pq-sys = { version = "0.6", features = ["bundled"] }
# openssl-sys = { version = "0.9.100", features = ["vendored"] }
dotenvy = "0.15"
env_logger = "0.11.5"
futures = "0.3.31"
itertools = "0.13.0"
log = "0.4.22"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
thiserror = "1.0.64"
uuid = { version = "1.10.0", features = ["v4", "serde"] }

[package]
default-run = "main"
edition = "2021"
name = "stagesync"
publish = false
version = "0.1.0"

[profile.dev]
debug-assertions = true
